<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/background_todo_app"
    android:layout_width="250dp"
    android:padding="18dp"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/etTask"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:hint="@string/text_dialog_add_task"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbLunes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_lunes"
            android:checked="true"
            android:textColor="@color/white"
            android:buttonTint="@color/lunes_category"/>

        <RadioButton
            android:id="@+id/rbMartes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_martes"
            android:textColor="@color/white"
            android:buttonTint="@color/martes_category"/>
        <RadioButton
            android:id="@+id/rbMiercoles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_miercoles"
            android:textColor="@color/white"
            android:buttonTint="@color/miercoles_category"/>
        <RadioButton
            android:id="@+id/rbJueves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_jueves"
            android:textColor="@color/white"
            android:buttonTint="@color/jueves_category"/>
        <RadioButton
            android:id="@+id/rbViernes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_viernes"
            android:textColor="@color/white"
            android:buttonTint="@color/viernes_category"/>
        <RadioButton
            android:id="@+id/rbSabado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sabado"
            android:textColor="@color/white"
            android:buttonTint="@color/sabado_category"/>
        <RadioButton
            android:id="@+id/rbDomingo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_domingo"
            android:textColor="@color/white"
            android:buttonTint="@color/domingo_category"/>

    </RadioGroup>
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:text="@string/text_agregar_task"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"/>
</LinearLayout>