<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/background_todo_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".todoapp.TodoActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/text_main"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginVertical="44dp"
        android:layout_marginHorizontal="22dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_categoria"
        style="@style/TodoStyle"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TodoStyle"
        android:layout_marginTop="32dp"
        android:text="@string/text_tarea" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTask"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"/>
</LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint= "@color/white"
        android:backgroundTint="@color/accent"
        app:fabSize="mini"
        android:src="@drawable/ic_plus"
        android:layout_gravity="end|bottom"
        android:layout_margin="18dp"/>
</FrameLayout>